Added logo to layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,11 +33,12 @@
 
       <section>
         <div id="title">
+          <a href="{{ site.github.url }}"><img src="/Ulex/ulex-logo.png" hspace="20" align="left"/></a>
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
           <hr>
           <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
+          <span class="credits right">View on <a href="{{ site.github.repository_url }}">GitHub</a> &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
         </div>
 
         {{ content }}
