--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
             <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
           {% endif %}
 
-          <a href="{{ site.github.url }}"><img src="/Ulex/ulex-logo.png" hspace="20" align="left"/></a>
+          <a href="{{ site.github.url }}"><img src="{{ site.github.url }}/ulex-logo.png" style="margin: 0px 20px" align="left"/></a>
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
